
2005-01-13  Bryan Bulten <bryan@bulten.ca>

	* Changed photo storage to use <base>/YYYY/MM/DD/HH-mm-ss as the base
	location for storing images, thumbnails, and working copies.  This will
	make it easier to find photos outside of PhotoTool, and faster for
	applications/operating systems that can't handle a large number of files
	in a directory.

	* Updated PhotoDialog to move the image files when the taken date is
	changed.

2005-01-09  Bryan Bulten <bryan@bulten.ca>

	* Added wxExifList and MetadataDialog for viewing exif metadata.

	* Re-vamped some of the icons to make their purpose a little clearer.

2005-01-08  Bryan Bulten <bryan@bulten.ca>

	* Added wxExif, a class for retrieving file exif information.  Loads
	metadata into a hash, no editing support provided yet.

2005-01-07  Bryan Bulten <bryan@bulten.ca>

	* Created new icons using InkScape.  Icons are in SVG format, and were
	converted to XPM.  Eventually these icons should be redone by someone with
	a little more skill ;-) .

2005-01-06  Bryan Bulten <bryan@bulten.ca>

	* Removed LibraryView, and send specific events to registered windows.
	This is cleaner, since handlers can just use their event tables, and no
	multiple inheritance is necessary.

2005-01-05  Bryan Bulten <bryan@bulten.ca>

	* Added GPL license statements to source files.

	* Added LibraryView interface for library views.  Adapted PhotoList and
	LookupList to use LibraryView for notifications.

	* Added EVT_PHOTO_SELECTED and EVT_PHOTOS_SELECTED.

2005-01-03  Bryan Bulten <bryan@bulten.ca>

	* Tested and fixed importing.  Changed to use modification file time
	instead of creation time.

	* Removed external boolean column from photo table.  The filename column
	is now used to indicate whether or not a file is stored externally.

	* Handled year change on TakenCalendar, and made minor refresh fix.

	* Moved repository to BerliOS for public development.

2004-12-31  Bryan Bulten <bryan@bulten.ca>
